--- a/Spanish/main/Settings.apk/res/values-es/strings.xml
+++ b/Spanish/main/Settings.apk/res/values-es/strings.xml
@@ -3041,4 +3041,57 @@ Nota: puedes tocar tres veces la pantalla para ampliar el contenido en cualquier
     <string name="preferred_app_settings_default">Por defecto</string>
     <string name="preferred_app_settings_reset">¿Restaurar apps por defecto?</string>
     <string name="preferred_app_settings_reset_message">Todas las apps se restaurarána las preetablecidas por MIUI</string>
-</resources>
+<string name="incoming_call_breathing_light_color_title">Color de llamadas</string>
+    <string name="notification_breathing_light_color_title">Color de notificaciones</string>
+    <string name="mms_breathing_light_color_title">Color de mensajes</string>
+    <string name="breathing_light_color_menu_title">Color de LED</string>
+    <string name="breathing_light_color_summary">Colode LED cuando se reciben notificaciones</string>
+    <string name="breathing_light_freq_title">Frecuencia LED</string>
+    <string name="incoming_call_breathing_light_freq_title">Frecuencia LED llamadas</string>
+    <string name="notification_breathing_light_freq_title">Frecuencia LED notificaciones</string>
+    <string name="mms_breathing_light_freq_title">Frecuencia LED mensajes</string>
+	<string name="priority_storage_title">Ajustes almacenamiento</string>
+    <string name="priority_storage_summary">Elige la localizacion por defecto para los datos de usuario</string>
+    <string name="priority_storage_settings_summary">"Si no hay tarjeta SD, los datos se guardarán en la memoria interna"</string>
+<string name="sync_wifi_only">Sólo WiFi</string>
+<string name="location_access_title">Acceder a mi localización</string>
+    <string name="location_access_summary">Permitir a las aplicaciones usar la información de localización</string>
+	<string name="location_title">Mi localización</string>
+    <string name="location_mode_title">Modo</string>
+    <string name="location_mode_high_accuracy_title">Alta precisión</string>
+    <string name="location_mode_battery_saving_title">Ahorro energía</string>
+    <string name="location_mode_sensors_only_title">Sólo GPS</string>
+    <string name="location_mode_location_off_title">Localización apagada</string>
+    <string name="location_category_recent_location_requests">Solicitudes recientes</string>
+    <string name="location_no_recent_apps">No hay apps recientes</string>
+    <string name="location_category_location_services">Servicios de localización</string>
+    <string name="location_high_battery_use">Alto uso de batería</string>
+    <string name="location_low_battery_use">Bajo uso de batería</string>
+    <string name="location_mode_screen_title">Modo de localización</string>
+    <string name="location_mode_high_accuracy_description">Usar GPS, WiFi, y datos móviles para determinar la posición</string>
+    <string name="location_mode_battery_saving_description">Usar WiFi y datos móviles para determinar la posición</string>
+    <string name="location_mode_sensors_only_description">Usar sólo GPS para determinar la posición</string>
+    <string name="location_loading_injected_setting">Recibiendo</string>
+    <string name="location_category_enhanced_location">Posición fijada</string>
+    <string name="location_network_based">WiFi y datos móviles</string>
+    <string name="location_neighborhood_level">Permitir a las aplicaciones usar los datos de WiFi y datos móviles para estimar tu posición</string>
+    <string name="location_neighborhood_level_wifi">Posición determinada por WiFi</string>
+    <string name="location_gps">GPS satelites</string>
+    <string name="location_street_level">Permitir a las apps usar el GPS para localizar</string>
+    <string name="verify_applications">Verificar apps</string>
+    <string name="verify_applications_summary">No permitir o avisar antes de instalar aplicaciones que puedan ser un riesgo</string>
+    <string name="credential_storage_type">Tipo de almacenamiento</string>
+	<string name="credential_storage_type_software">Sólo Software</string>
+    <string name="noise_suppression">Supresión de ruido ambiente</string>
+    <string name="phone_call_noise_suppression">Suprimir ruido durante las llamadas</string>
+	<string name="touch_title">Táctil</string>
+	<string name="miui_screensaver_state_on">Encendido</string>
+    <string name="miui_screensaver_state_off">Apagado</string>
+    <string name="miui_screensaver_title">Salvapantallas</string>
+    <string name="activate_miui_screensaver">Salvapantallas durante suspensión</string>
+	<string name="miui_screensaver_usage">Las imagenes se mostrarán 5 segundos</string>
+    <string name="title_font">Fuente</string>
+    <string name="title_font_current">Actual</string>
+	<string name="line_breaking_title">Optimizar texto</string>
+    <string name="line_breaking_summary">Optimizar saltos de línea</string>
+	</resources>
