--- a/Spanish/main/framework-res.apk/res/values-es/strings.xml
+++ b/Spanish/main/framework-res.apk/res/values-es/strings.xml
@@ -1303,5 +1303,47 @@
   <string name="zzzz_agold_xingqiwu">Vie</string>
   <string name="zzzz_agold_xingqiliu">Sab</string>
   <string name="zzzz_agold_xingqiri">Dom</string>  
-  
+  <string name="kg_emergency_call_label">Llamada emergencia</string>
+    <string name="kg_forgot_pattern_button_text">Patrón olvidado</string>
+    <string name="kg_wrong_pattern">Patrón erróneo</string>
+    <string name="kg_wrong_password">Contraseña errónea</string>
+    <string name="kg_wrong_pin">PIN erróneo</string>
+    <string name="kg_too_many_failed_attempts_countdown">Prueba de nuevo en %1$d segundos.</string>
+    <string name="kg_pattern_instructions">Dibuja el patrón</string>
+    <string name="kg_sim_pin_instructions">Introduce PIN de la SIM</string>
+    <string name="kg_pin_instructions">Introduce PIN</string>
+    <string name="kg_password_instructions">Introduce contraseña</string>
+    <string name="kg_puk_enter_puk_hint">SIM deshabilitada. Introduce el código PUK para continuar.</string>
+    <string name="kg_puk_enter_pin_hint">Introduce el PIN deseado</string>
+    <string name="kg_enter_confirm_pin_hint">Confirma el PIN deseado</string>
+    <string name="kg_sim_unlock_progress_dialog_message">Desbloqueando tarjeta SIM…</string>
+    <string name="kg_password_wrong_pin_code">PIN incorrecto.</string>
+    <string name="kg_invalid_sim_pin_hint">Introduce un PIN de 4 a 8 dígitos.</string>
+    <string name="kg_invalid_sim_puk_hint">Código PUK debe ser de 8 o más dígitos.</string>
+    <string name="kg_invalid_puk">Introduce el código PUK. Más intentos bloquearán la tarjeta SIM.</string>
+    <string name="kg_invalid_confirm_pin_hint">No coinciden los códigos PIN</string>
+    <string name="kg_login_too_many_attempts">Demasiados intentos de patrón</string>
+    <string name="kg_login_instructions">Para desbloquear, logueate en tu cuenta Google.</string>
+    <string name="kg_login_username_hint">Usuario (email)</string>
+    <string name="kg_login_password_hint">Contraseña</string>
+    <string name="kg_login_submit_button">Iniciar sesión</string>
+    <string name="kg_login_invalid_input">Usuario o contraseña inválida.</string>
+    <string name="kg_login_account_recovery_hint">"¿Usuario o contraseña olvidados?
+Visita "<b>google.com/accounts/recovery</b>.</string>
+    <string name="kg_login_checking_password">Comprobando cuenta…</string>
+    <string name="kg_too_many_failed_pin_attempts_dialog_message" formatted="false">"Has introducido el PIN mal %d veces. 
+
+Inténtalo en %d segundos."</string>
+    <string name="kg_too_many_failed_password_attempts_dialog_message" formatted="false">"Has introducido la contraseña mal %d veces. 
+
+Inténtalo en %d segundos."</string>
+    <string name="kg_too_many_failed_pattern_attempts_dialog_message" formatted="false">"Has dibujado el patrón mal %d veces. 
+
+Inténtalo en %d segundos."</string>
+    <string name="kg_failed_attempts_almost_at_wipe" formatted="false">Has intentado desbloquear el teléfono %d veces mal. Después de %d veces más el teléfono se reseteará a los valores por defecto.</string>
+    <string name="kg_failed_attempts_now_wiping">Has intentnado desbloquear el teléfono %d veces mal. El teléfono se reseteará a los valores por defecto.</string>
+    <string name="kg_failed_attempts_almost_at_login" formatted="false">"Has dibujado el patrón %d veces mal. Después de %d veces más se enviará un email a tu cuenta para desbloquear el teléfono.
+
+ Inténtalo en %d segundos."</string>
+    <string name="kg_reordering_delete_drop_target_text">Eliminar</string>
 </resources>
